syntax = "proto3";
option go_package = "ChittyChat/gRPC/proto";

message Messages {
  repeated string messages = 1;
}

message LamportTimestamp {
  int32 lamporttimestamp = 1;
}

message ClientId {
  int32 clientid = 1;
}

message Empty {}

message MessagePackage {
  Messages message = 1;
  LamportTimestamp lamporttimestamp = 2;
}

message ClientPackage {
  ClientId clientId = 1;
  LamportTimestamp lamportTimestamp = 2;
}

service ChittyChat {
  rpc GetMessages (ClientPackage) returns (stream MessagePackage) {};
  rpc PostMessage (MessagePackage) returns (Empty) {};
  rpc CreateClientIdentifier (Empty) returns (ClientId) {};
  rpc Disconnect (ClientPackage) returns (Empty) {};
}